--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.1.7",
     "html-react-parser": "^5.1.10",
     "install": "^0.13.0",
     "jquery": "^3.7.1",
